Set opacity to 0 on the backgroundimage to fix the flickering on start

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,7 @@ html {
 }
 
 .fade-in-animation {
+  opacity: 0;
   animation: fadeIn 1.5s ease-in forwards;
   animation-delay: .5s;
 }
